--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-anguage: ruby
+language: ruby
 
 services:
   - docker
@@ -8,21 +8,3 @@ before_install:
 
 script:
 - deploy.sh
-```
-
-Now create `prepare.sh`:
-
-```sh
-#!/bin/bash
-
-gem install civo_cli
-civo apikey add production $CIVO_API_KEY
-
-mkdir -p ~/.ssh/
-
-echo -n $SSH_PUBLIC_KEY > ~/.ssh/id_rsa.pub
-
-# Convert the single line back into multiple lines
-echo -n $SSH_PRIVATE_KEY | base64 --decode > ~/.ssh/id_rsa
-
-echo -n $SSH_KEY_ID > $HOME/key_ids.txt
