--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: ruby
 services:
   - docker
 
+before_install:
+  - rvm get stable --auto-dotfiles
+  - rvm install 2.3.1
+
 install:
 - ./gitops/prepare.sh
 
