--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - gem update --system
   - gem --version
   - rvm use default
-  - sudo rvm repair wrappers
+  - rvm repair wrappers
 
 install:
 - ./gitops/prepare.sh
